--- a/A100/A100_开箱.ipynb
+++ b/A100/A100_开箱.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b512ba32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-03T12:56:35.029145Z",
-     "start_time": "2024-02-03T12:56:35.021848Z"
+     "end_time": "2024-02-11T10:29:11.682719Z",
+     "start_time": "2024-02-11T10:29:11.666329Z"
     }
    },
    "outputs": [],
@@ -23,6 +23,194 @@
     "- references\n",
     "    - https://infohub.delltechnologies.com/static/media/client/7phukh/DAM_d6ac0280-3398-47e3-8ad8-075751746a0b.pdf\n",
     "    - https://nigelcannings.medium.com/unlocking-maximum-inference-capability-a-deep-dive-into-llama2-70b-on-an-80gb-a100-gpu-2ab1158d6b0b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fc4fb99",
+   "metadata": {},
+   "source": [
+    "## 配置清单"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "922d9fc6",
+   "metadata": {},
+   "source": [
+    "- 超微（supermicro）7049GP原厂平台  \n",
+    "    - https://www.youtube.com/watch?v=C-ygJ3bcMSs\n",
+    "- 处理器（CPU）的至强铂金 8374B  \\*2  总计 76核心 152线程\n",
+    "    - 至强铂金：Xeon Platinum\n",
+    "- 内存是 ddr4 3200MHZ  64G*8根 =512G\n",
+    "- 显卡是 Nvidia A100-SXM4-40GB \\* 2\n",
+    "   \n",
+    "- 硬盘是 三星 2T M.2  NVME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7bd5e4c",
+   "metadata": {},
+   "source": [
+    "### 超微平台"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cad47b34",
+   "metadata": {},
+   "source": [
+    "- 超微（supermicro）7049GP原厂平台  \n",
+    "    - https://www.youtube.com/watch?v=C-ygJ3bcMSs\n",
+    "- 还有可选的主流处理器"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bd6cd8c7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-11T10:29:29.093281Z",
+     "start_time": "2024-02-11T10:29:29.082548Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"../imgs/处理器.jpeg\" width=\"300\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url='../imgs/处理器.jpeg', width=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fb3b290",
+   "metadata": {},
+   "source": [
+    "### gpus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0000f6a3",
+   "metadata": {},
+   "source": [
+    "- Nvidia A100-SXM4-40GB，\n",
+    "- SXM4 vs. PCIe\n",
+    "    - SXM4: \n",
+    "        - 使用了Nvidia的第四代NVIDIA NVLink和SXM（Scalable Link Interface Module）技术\n",
+    "        - SXM接口允许GPU以更紧密的物理距离被安装在一起，这有助于提高能效和信号传输速度。\n",
+    "    - SXM4 提供了远高于PCIe的通信带宽和更低的延迟\n",
+    "- SXM 通过与 NVlink 一起使用：SXM提供物理连接和电力供应的优化，而NVLink提供高速的数据通信路径。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac322f1b",
+   "metadata": {},
+   "source": [
+    "`nvidia-smi topo -m`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "771c8700",
+   "metadata": {},
+   "source": [
+    "- https://www.youtube.com/watch?v=flxBD-YwXmM\n",
+    "    - NVIDIA NVLink Bridge 3-Slot on NVIDIA RTX A6000\n",
+    "        - NVLink桥接器的物理尺寸和所需的插槽空间"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40311f0a",
+   "metadata": {},
+   "source": [
+    "### cpu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec543324",
+   "metadata": {},
+   "source": [
+    "- `lscpu`\n",
+    "    - Socket(s): CPU插槽（物理CPU）的数量，表述 CPU 的物理插槽；\n",
+    "    - CPU(s): 显示逻辑CPU的总数。(152) （`nproc`: the number of processing units available）\n",
+    "    - On-line CPU(s) list: 在线的CPU编号列表。(0-151)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b444abcf",
+   "metadata": {},
+   "source": [
+    "- 注意区别核心数（Cores，物理的）和线程数（Threads，逻辑的，逻辑处理线程，是操作系统能够进行调度的最小执行单元。）\n",
+    "    - CPU(s): 显示逻辑CPU的总数，总的线程数；\n",
+    "        - 152\n",
+    "    - Core(s) per socket: 这个数字表示每个CPU插槽（socket）中的核心数（Cores）\n",
+    "        - `38`\n",
+    "    - Thread(s) per core: 这个数字表示每个核心支持的线程数。\n",
+    "    - 38\\*2\\*2 = 152"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99e6e041",
+   "metadata": {},
+   "source": [
+    "### 其他"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76955117",
+   "metadata": {},
+   "source": [
+    "- 内存条（RAM）：内存可选得话 ddr4 3200MHZ 规格的： 16G 32G 64G 128G 256G都可以\n",
+    "    - 可以插16根\n",
+    "- `sudo dmidecode --type memory`\n",
+    "- `sudo dmidecode --type memory | grep -i type`\n",
+    "- `sudo dmidecode --type memory | grep -i size`\n",
+    "- `sudo dmidecode --type memory | grep -i speed`\n",
+    "- `free -h`：使用情况"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6a302b7",
+   "metadata": {},
+   "source": [
+    "- 硬盘\n",
+    "    - `lsblk`： \n",
+    "        - `/dev/nvme0n1p1`: \n",
+    "            - nvme 表示设备使用NVMe协议，\n",
+    "            - 0 通常是指控制器编号，\n",
+    "            - n1 表示第一个NVMe设备（n后面的数字代表设备编号），\n",
+    "            - 而p1 表示设备的第一个分区（p后面的数字代表分区编号）。\n",
+    "                - `/dev/nvme0n1p2`\n",
+    "        - 查看操作系统安装所在的磁盘分区\n",
+    "            - `findmnt -n -o SOURCE /`\n",
+    "    - `df -h`：磁盘使用情况\n",
+    "    - 查看硬盘品牌及型号\n",
+    "    ```\n",
+    "    sudo apt install smartmontools\n",
+    "    sudo smartctl -a /dev/nvme0n1p1 | grep Model\n",
+    "    ```"
    ]
   },
   {
