--- a/A100/A100_开箱.ipynb
+++ b/A100/A100_开箱.ipynb
@@ -43,22 +43,51 @@
     "- 处理器（CPU）的至强铂金 8374B  \\*2  总计 76核心 152线程\n",
     "    - 至强铂金：Xeon Platinum\n",
     "- 内存是 ddr4 3200MHZ  64G*8根 =512G\n",
-    "- 显卡是 Nvidia A100-SXM4-40GB \\* 2\n",
-    "   \n",
+    "- 显卡是 Nvidia A100-40GB \\* 2\n",
+    "  - PCI-e, nvlink\n",
     "- 硬盘是 三星 2T M.2  NVME"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7bd5e4c",
+   "id": "0cd40b3a",
    "metadata": {},
    "source": [
     "### 超微平台"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3ea117ee",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-11T12:32:22.764855Z",
+     "start_time": "2024-02-11T12:32:22.754778Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"../imgs/a100s_07.jpeg\" width=\"400\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url='../imgs/a100s_07.jpeg', width=400, rota)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "cad47b34",
+   "id": "2a67c79c",
    "metadata": {},
    "source": [
     "- 超微（supermicro）7049GP原厂平台  \n",
@@ -69,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bd6cd8c7",
+   "id": "ef88c09e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-11T10:29:29.093281Z",
@@ -97,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fb3b290",
+   "id": "c4a757b5",
    "metadata": {},
    "source": [
     "### gpus"
@@ -105,29 +134,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0000f6a3",
+   "id": "cb93936d",
    "metadata": {},
    "source": [
-    "- Nvidia A100-SXM4-40GB，\n",
-    "- SXM4 vs. PCIe\n",
-    "    - SXM4: \n",
-    "        - 使用了Nvidia的第四代NVIDIA NVLink和SXM（Scalable Link Interface Module）技术\n",
-    "        - SXM接口允许GPU以更紧密的物理距离被安装在一起，这有助于提高能效和信号传输速度。\n",
-    "    - SXM4 提供了远高于PCIe的通信带宽和更低的延迟\n",
-    "- SXM 通过与 NVlink 一起使用：SXM提供物理连接和电力供应的优化，而NVLink提供高速的数据通信路径。"
+    "- Nvidia A100-40GB，"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac322f1b",
+   "id": "31ffec96",
    "metadata": {},
    "source": [
-    "`nvidia-smi topo -m`"
+    "- `nvidia-smi topo -p2p p`\n",
+    "- `nvidia-smi topo -m`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "771c8700",
+   "id": "9a929f48",
    "metadata": {},
    "source": [
     "- https://www.youtube.com/watch?v=flxBD-YwXmM\n",
@@ -137,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40311f0a",
+   "id": "e92b2ca0",
    "metadata": {},
    "source": [
     "### cpu"
@@ -145,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec543324",
+   "id": "8987940d",
    "metadata": {},
    "source": [
     "- `lscpu`\n",
@@ -156,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b444abcf",
+   "id": "12bdc4c3",
    "metadata": {},
    "source": [
     "- 注意区别核心数（Cores，物理的）和线程数（Threads，逻辑的，逻辑处理线程，是操作系统能够进行调度的最小执行单元。）\n",
@@ -170,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e6e041",
+   "id": "a81948e0",
    "metadata": {},
    "source": [
     "### 其他"
@@ -178,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76955117",
+   "id": "ea7127e1",
    "metadata": {},
    "source": [
     "- 内存条（RAM）：内存可选得话 ddr4 3200MHZ 规格的： 16G 32G 64G 128G 256G都可以\n",
@@ -192,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a302b7",
+   "id": "cf3e1c4d",
    "metadata": {},
    "source": [
     "- 硬盘\n",
@@ -231,12 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "a0c166a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-03T12:56:51.916985Z",
-     "start_time": "2024-02-03T12:56:51.856294Z"
+     "end_time": "2024-02-11T12:37:46.268782Z",
+     "start_time": "2024-02-11T12:37:46.197433Z"
     }
    },
    "outputs": [
@@ -247,28 +271,29 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {
       "image/jpeg": {
-       "width": 200
+       "width": 400
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image('../imgs/a100_1.jpeg', width=200)"
+    "Image('../imgs/a100_1.jpeg', width=400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "88427786",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-03T12:57:00.238398Z",
-     "start_time": "2024-02-03T12:57:00.190567Z"
-    }
+     "end_time": "2024-02-11T12:18:24.666473Z",
+     "start_time": "2024-02-11T12:18:24.603930Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -278,35 +303,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {
       "image/jpeg": {
-       "width": 200
+       "width": 400
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image('../imgs/a100_2.jpeg', width=200)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0d35ee7a",
-   "metadata": {},
-   "source": [
-    "## gpus"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "def72304",
-   "metadata": {},
-   "source": [
-    "- `nvidia-smi`\n",
-    "- `nvidia-smi topo -p2p p`\n",
-    "- `nvidia-smi topo -m`"
+    "Image('../imgs/a100_2.jpeg', width=400)"
    ]
   }
  ],
