--- a/A100/A100_开箱.ipynb
+++ b/A100/A100_开箱.ipynb
@@ -40,6 +40,9 @@
    "source": [
     "- 超微（supermicro）7049GP原厂平台  \n",
     "    - https://www.youtube.com/watch?v=C-ygJ3bcMSs\n",
+    "    - Dual-socket Intel Xeon Scalable\n",
+    "    - Support up to 4X GPUs\n",
+    "    - 2U/4U 表示的是平放时的高度；\n",
     "- 处理器（CPU）的至强铂金 8374B  \\*2  总计 76核心 152线程\n",
     "    - 至强铂金：Xeon Platinum\n",
     "- 内存是 ddr4 3200MHZ  64G*8根 =512G\n",
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cd40b3a",
+   "id": "505723b2",
    "metadata": {},
    "source": [
     "### 超微平台"
@@ -59,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3ea117ee",
+   "id": "0d0a4823",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-11T12:32:22.764855Z",
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a67c79c",
+   "id": "92cb664a",
    "metadata": {},
    "source": [
     "- 超微（supermicro）7049GP原厂平台  \n",
@@ -98,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ef88c09e",
+   "id": "bb9e31c3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-11T10:29:29.093281Z",
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a757b5",
+   "id": "8f661f4e",
    "metadata": {},
    "source": [
     "### gpus"
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb93936d",
+   "id": "8747aaca",
    "metadata": {},
    "source": [
     "- Nvidia A100-40GB，"
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ffec96",
+   "id": "87c80f6a",
    "metadata": {},
    "source": [
     "- `nvidia-smi topo -p2p p`\n",
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a929f48",
+   "id": "d2d693ef",
    "metadata": {},
    "source": [
     "- https://www.youtube.com/watch?v=flxBD-YwXmM\n",
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e92b2ca0",
+   "id": "273980c7",
    "metadata": {},
    "source": [
     "### cpu"
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8987940d",
+   "id": "86f1eb0d",
    "metadata": {},
    "source": [
     "- `lscpu`\n",
@@ -180,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12bdc4c3",
+   "id": "c87b4a78",
    "metadata": {},
    "source": [
     "- 注意区别核心数（Cores，物理的）和线程数（Threads，逻辑的，逻辑处理线程，是操作系统能够进行调度的最小执行单元。）\n",
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81948e0",
+   "id": "2f274717",
    "metadata": {},
    "source": [
     "### 其他"
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7127e1",
+   "id": "0ac425d0",
    "metadata": {},
    "source": [
     "- 内存条（RAM）：内存可选得话 ddr4 3200MHZ 规格的： 16G 32G 64G 128G 256G都可以\n",
@@ -216,10 +219,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3e1c4d",
+   "id": "f07dd974",
    "metadata": {},
    "source": [
-    "- 硬盘\n",
+    "- 硬盘：nvme 的安装（https://www.youtube.com/shorts/2s34x-mt1wk）\n",
     "    - `lsblk`： \n",
     "        - `/dev/nvme0n1p1`: \n",
     "            - nvme 表示设备使用NVMe协议，\n",
@@ -261,7 +264,8 @@
     "ExecuteTime": {
      "end_time": "2024-02-11T12:37:46.268782Z",
      "start_time": "2024-02-11T12:37:46.197433Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -286,12 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "88427786",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-11T12:18:24.666473Z",
-     "start_time": "2024-02-11T12:18:24.603930Z"
+     "end_time": "2024-02-11T12:45:46.996635Z",
+     "start_time": "2024-02-11T12:45:46.947141Z"
     },
     "scrolled": false
    },
@@ -303,7 +307,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {
       "image/jpeg": {
        "width": 400
@@ -313,6 +317,7 @@
     }
    ],
    "source": [
+    "# https://www.youtube.com/watch?v=flxBD-YwXmM\n",
     "Image('../imgs/a100_2.jpeg', width=400)"
    ]
   }
