--- a/A100/gpuburn_cpuburn_cuda_samples.ipynb
+++ b/A100/gpuburn_cpuburn_cuda_samples.ipynb
@@ -20,6 +20,9 @@
     "    git clone https://github.com/wilicc/gpu-burn\n",
     "    cd gpu-burn\n",
     "    make\n",
+    "    ./gpu_burn\n",
+    "    ./gpu_burn 60\n",
+    "    ./gpu_burn -tc 300\n",
     "    ```\n",
     "    \n",
     "    - tar.gz：http://wili.cc/blog/gpu-burn.html\n",
@@ -39,7 +42,9 @@
     "- 4090\n",
     "    - `2.7%  proc'd: 880 (145963 Gflop/s) - 880 (146466 Gflop/s)   errors: 0 - 0   temps: 46 C - 46 C `\n",
     "- 3090ti\n",
-    "    - `55350 Gflop/s`"
+    "    - `55350 Gflop/s`\n",
+    "- A100-40GB\n",
+    "    - "
    ]
   },
   {
@@ -56,7 +61,11 @@
    "metadata": {},
    "source": [
     "- https://patrickmn.com/projects/cpuburn/\n",
-    "  - 解压直接 `./cpuburn`;"
+    "  - 解压直接 `./cpuburn`;\n",
+    "  \n",
+    "  ```\n",
+    "  Burning 152 CPUs/cores\n",
+    "  ```"
    ]
   },
   {
