--- a/A100/gpuburn_cpuburn_cuda_samples.ipynb
+++ b/A100/gpuburn_cpuburn_cuda_samples.ipynb
@@ -39,12 +39,12 @@
    "id": "e8dc3f8d",
    "metadata": {},
    "source": [
-    "- 4090\n",
+    "- 4090 (tc)\n",
     "    - `2.7%  proc'd: 880 (145963 Gflop/s) - 880 (146466 Gflop/s)   errors: 0 - 0   temps: 46 C - 46 C `\n",
-    "- 3090ti\n",
+    "- 3090ti (tc)\n",
     "    - `55350 Gflop/s`\n",
-    "- A100-40GB\n",
-    "    - "
+    "- A100-40GB (tc)\n",
+    "    - `100.0%  proc'd: 32568 (118649 Gflop/s) - 33534 (122261 Gflop/s)   errors: 0 - 0`"
    ]
   },
   {
@@ -65,6 +65,17 @@
     "  \n",
     "  ```\n",
     "  Burning 152 CPUs/cores\n",
+    "  ```\n",
+    "  \n",
+    "  - 测试cpu传感器温度\n",
+    "  \n",
+    "  ```\n",
+    "  # 安装\n",
+    "  sudo apt install lm-sensors\n",
+    "  # 配置，yes\n",
+    "  sudo sensors-detect\n",
+    "  watch -n 1 sensors\n",
+    "  # 也可以查看系统监视器（system monitor）\n",
     "  ```"
    ]
   },
@@ -83,6 +94,9 @@
    "source": [
     "\n",
     "```\n",
+    "# 安装 cmake\n",
+    "sudo apt install cmake -y\n",
+    "\n",
     "git clone https://github.com/NVIDIA/cuda-samples.git\n",
     "# git clone git@github.com:NVIDIA/cuda-samples.git\n",
     "cd cuda-samples\n",
@@ -106,6 +120,88 @@
     "\n",
     "- `cuda-samples/Samples/5_Domain_Specific/`\n",
     "    - `p2pBandwidthLatencyTest`：两块gpu，卡间p2p带宽；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e2ce711",
+   "metadata": {},
+   "source": [
+    "### `deviceQuery`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "696f207e",
+   "metadata": {},
+   "source": [
+    "- cuda driver version / runtime version\n",
+    "- cuda capability major/minor version number\n",
+    "- cuda cores\n",
+    "    - 4090: 16384 cuda cores, A100: 6912\n",
+    "- memory bus width\n",
+    "    - 4090: 384-bit, A100: 5120-bit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7192e793",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-12T04:32:35.351135Z",
+     "start_time": "2024-02-12T04:32:35.331722Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fraction(64, 27)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fractions import Fraction\n",
+    "Fraction(16384, 6912)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c95b0cfd",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-12T04:32:51.737202Z",
+     "start_time": "2024-02-12T04:32:51.726846Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3703703703703702"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "16384/6912"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d328ee3",
+   "metadata": {},
+   "source": [
+    "### 1080ti"
    ]
   },
   {
