--- a/nvidia_cuda/gpu_cuda_nvcc.ipynb
+++ b/nvidia_cuda/gpu_cuda_nvcc.ipynb
@@ -97,6 +97,98 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a103a235",
+   "metadata": {},
+   "source": [
+    "## basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6bf997b",
+   "metadata": {},
+   "source": [
+    "- CUDA Driver Version / Runtime Version\n",
+    "    - cuda driver version：`nvidia-smi`\n",
+    "    - runtime version: `nvcc -V`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "03816277",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-12T03:38:40.153911Z",
+     "start_time": "2024-02-12T03:38:39.874347Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon Feb 12 11:38:39 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 545.29.06              Driver Version: 545.29.06    CUDA Version: 12.3     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  NVIDIA GeForce RTX 4090        Off | 00000000:18:00.0 Off |                  Off |\n",
+      "| 45%   34C    P8              25W / 450W |     14MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:8A:00.0 Off |                  Off |\n",
+      "| 45%   30C    P8              16W / 450W |     14MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A      2005      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "|    1   N/A  N/A      2005      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "00b6df4b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-12T03:38:48.993726Z",
+     "start_time": "2024-02-12T03:38:48.860517Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nvcc: NVIDIA (R) Cuda compiler driver\r\n",
+      "Copyright (c) 2005-2023 NVIDIA Corporation\r\n",
+      "Built on Wed_Nov_22_10:17:15_PST_2023\r\n",
+      "Cuda compilation tools, release 12.3, V12.3.107\r\n",
+      "Build cuda_12.3.r12.3/compiler.33567101_0\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvcc -V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "546d1ab4",
    "metadata": {},
    "source": [
@@ -203,8 +295,8 @@
    "id": "cc7d08a2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-20T14:29:19.247504Z",
-     "start_time": "2023-12-20T14:29:17.502908Z"
+     "end_time": "2024-02-12T02:38:27.442446Z",
+     "start_time": "2024-02-12T02:38:24.782661Z"
     }
    },
    "outputs": [
