--- a/A100/gpuburn_cpuburn_cuda_samples.ipynb
+++ b/A100/gpuburn_cpuburn_cuda_samples.ipynb
@@ -22,7 +22,7 @@
     "    make\n",
     "    ./gpu_burn\n",
     "    ./gpu_burn 60\n",
-    "    ./gpu_burn -tc 300\n",
+    "    ./gpu_burn -tc 300 (major >= 7)\n",
     "    ```\n",
     "    \n",
     "    - tar.gz：http://wili.cc/blog/gpu-burn.html\n",
@@ -32,6 +32,19 @@
     "    cd xx\n",
     "    make\n",
     "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25dc4421",
+   "metadata": {},
+   "source": [
+    "- 也可以指定卡去跑\n",
+    "\n",
+    "```\n",
+    "export CUDA_VISIBLE_DEVICES=1\n",
+    "./gpu_burn 100\n",
+    "```"
    ]
   },
   {
@@ -100,8 +113,8 @@
     "git clone https://github.com/NVIDIA/cuda-samples.git\n",
     "# git clone git@github.com:NVIDIA/cuda-samples.git\n",
     "cd cuda-samples\n",
-    "git checkout tags/v12.0\n",
-    "conda deactivate\n",
+    "# git checkout tags/v12.0\n",
+    "# conda deactivate\n",
     "make\n",
     "```\n"
    ]
@@ -119,12 +132,13 @@
     "        - `./bandwidthTest -device=all`\n",
     "\n",
     "- `cuda-samples/Samples/5_Domain_Specific/`\n",
-    "    - `p2pBandwidthLatencyTest`：两块gpu，卡间p2p带宽；"
+    "    - `p2pBandwidthLatencyTest`：两块gpu，卡间p2p带宽；\n",
+    "    - P2P技术允许两个GPU直接相互通信，而不需要通过CPU"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e2ce711",
+   "id": "ef6f2f4a",
    "metadata": {},
    "source": [
     "### `deviceQuery`"
@@ -132,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "696f207e",
+   "id": "d2217fa4",
    "metadata": {},
    "source": [
     "- cuda driver version / runtime version\n",
@@ -146,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7192e793",
+   "id": "e89b5467",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-12T04:32:35.351135Z",
@@ -173,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c95b0cfd",
+   "id": "7fe3c1a1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-12T04:32:51.737202Z",
@@ -198,7 +212,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d328ee3",
+   "id": "4586d3c4",
+   "metadata": {},
+   "source": [
+    "### `bandwidthTest`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99e23cd1",
+   "metadata": {},
+   "source": [
+    "- 不同类型的内存传输\n",
+    "    - 主机到设备（host to device，即CPU及其内存传输到设备（GPU内存））\n",
+    "    - 设备到主机（device to host，从设备（GPU内存）回传到主机（系统内存））\n",
+    "    - 设备到设备（device to device，两个GPU之间直接传输数据的性能）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1530ff2",
    "metadata": {},
    "source": [
     "### 1080ti"
