--- a/A100/multi_4090s_transformers.ipynb
+++ b/A100/multi_4090s_transformers.ipynb
@@ -21,7 +21,8 @@
     "        pip install -v --disable-pip-version-check --no-cache-dir --global-option=\"--cpp_ext\" --global-option=\"--cuda_ext\" ./\n",
     "        ```\n",
     "        - pytorch 的 cuda 版本要与系统的 cuda 版本保持一致\n",
-    "            - `cat ~/.zshrc`/`cat ~/.bashrc`\n",
+    "            - zshell: `cat ~/.zshrc`\n",
+    "            - bshell: `cat ~/.bashrc`\n",
     "    - Megatron-LM（威震天）\n",
     "        - `nvidia-smi --query-gpu=compute_cap --format=csv`\n",
     "        - `git clone https://github.com/NVIDIA/Megatron-LM`\n",
