--- a/ubuntu/iterm_zsh.ipynb
+++ b/ubuntu/iterm_zsh.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08d354a8",
+   "metadata": {},
+   "source": [
+    "- 关于 shell\n",
+    "    - 查看所有可用 shell：`cat /etc/shells`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "126708a3",
    "metadata": {},
    "source": [
@@ -118,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
