--- a/nvidia_cuda/nvidia-smi_显卡信息查看.ipynb
+++ b/nvidia_cuda/nvidia-smi_显卡信息查看.ipynb
@@ -29,6 +29,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2fc65eb",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "nvidia-smi --query-gpu=gpu_name,gpu_bus_id,vbios_version,compute_cap --format=csv\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f9bd72fa",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-12T10:05:07.589721Z",
+     "start_time": "2024-02-12T10:05:07.425257Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name, pci.bus_id, vbios_version, compute_cap\r\n",
+      "NVIDIA GeForce RTX 4090, 00000000:18:00.0, 95.02.3C.00.99, 8.9\r\n",
+      "NVIDIA GeForce RTX 4090, 00000000:8A:00.0, 95.02.3C.00.99, 8.9\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi --query-gpu=gpu_name,gpu_bus_id,vbios_version,compute_cap --format=csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1a8f3689",
    "metadata": {},
    "source": [
@@ -144,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
