--- a/nvidia_cuda/显卡核心技术参数.ipynb
+++ b/nvidia_cuda/显卡核心技术参数.ipynb
@@ -65,9 +65,71 @@
     "    - 4090：16384/512 == 32\n",
     "        - 2^14/2^9=2^5\n",
     "    - 而 20 系的倍数是 8/1\n",
+    "    - 4090: 16384 cuda cores, A100: 6912\n",
     "- 存储\n",
     "    - 速度：L1 > L2 > 显存（VRAM）\n",
     "        - L1/L2：cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9365fa2",
+   "metadata": {},
+   "source": [
+    "## memory bus width"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de4c8864",
+   "metadata": {},
+   "source": [
+    "- 4090: 384-bit, A100: 5120-bit\n",
+    "    - 内存总线宽度是指GPU（cores）与其显存（GPU内存）之间的数据传输通道的宽度\n",
+    "    - A100 5120 bit： 采用的是HBM2（高带宽内存）技术\n",
+    "    - 内存总线宽度越宽，理论上GPU的内存带宽越高\n",
+    "- 4090 计算得快，A100 内存读取得快；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca8c65c1",
+   "metadata": {},
+   "source": [
+    "- 计算GPU的理论带宽（不适用于 hbm 的计算）：\n",
+    "    - A100 (HBM2)\n",
+    "        - deviceQuery：memory clock rate，1215mhz\n",
+    "    - 4090 (GDDR6X)\n",
+    "        - deviceQuery：memory clock rate，10501mhz\n",
+    "$$\n",
+    "\\text{理论带宽 (GB/s)}= \\frac{内存总线宽度 (bits)×内存速度 (MHz)}{8×1024}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0d683178",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-13T07:47:31.035252Z",
+     "start_time": "2024-02-13T07:47:31.030379Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6563.125"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5120*10501/(8*1024)"
    ]
   }
  ],
@@ -87,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
