--- a/A100/multi_4090s_transformers.ipynb
+++ b/A100/multi_4090s_transformers.ipynb
@@ -12,7 +12,9 @@
     "    - transformers 需要**源码**安装\n",
     "        ```\n",
     "        git clone https://github.com/huggingface/transformers\n",
-    "        cd transformers; git checkout v4.28.1; pip install .\n",
+    "        cd transformers; \n",
+    "        # git checkout v4.28.1; \n",
+    "        pip install .\n",
     "        ```\n",
     "    - apex：https://github.com/NVIDIA/apex （Amp: Automatic Mixed Precision &  Distributed Training）\n",
     "        ```\n",
@@ -20,6 +22,7 @@
     "        cd apex\n",
     "        pip install -v --disable-pip-version-check --no-cache-dir --global-option=\"--cpp_ext\" --global-option=\"--cuda_ext\" ./\n",
     "        ```\n",
+    "        - 可能还需要加一个 `--no-build-isolation` 的参数\n",
     "        - pytorch 的 cuda 版本要与系统的 cuda 版本保持一致\n",
     "            - zshell: `cat ~/.zshrc`\n",
     "            - bshell: `cat ~/.bashrc`\n",
@@ -1568,7 +1571,7 @@
     }
    ],
    "source": [
-    "bert_half = hf_bert(Exp('HF 16-bit', 'bert-large-uncased', batch_size=11,`\n",
+    "bert_half = hf_bert(Exp('HF 16-bit', 'bert-large-uncased', batch_size=11, bf16=True))\n",
     "compare([bert_single, bert_half])"
    ]
   },
