--- a/ubuntu/ssh 端口转发与跳板机.ipynb
+++ b/ubuntu/ssh 端口转发与跳板机.ipynb
@@ -28,6 +28,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ad04908",
+   "metadata": {},
+   "source": [
+    "### 免密登录"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "697ae8e9",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "ssh-keygen\n",
+    "ssh-copy-id xx@xx.xx.xx.xx\n",
+    "```\n",
+    "\n",
+    "- `ssh-copy-id`：将本地的 ssh 公钥复制（追加）到远程主机的 `~/.ssh/authorized_key`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "358acd67",
    "metadata": {},
    "source": [
