--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8db7734e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-18T11:19:20.355185Z",
+     "start_time": "2024-02-18T11:19:20.347504Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fb3541b7",
    "metadata": {},
@@ -76,6 +91,35 @@
     "        - https://3jkkvi9afjjln2yjwnbc.wgetcloud.org/user/subscribe\n",
     "        - https://kyp9p97fyfa6juyngbdg.wgetcloud.org/login\n",
     "    - flyingbird：https://fbcfaff01.flyingbird.pro/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "01350169",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-18T11:19:42.351672Z",
+     "start_time": "2024-02-18T11:19:42.345716Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"./imgs/network_proxy.png\" width=\"300\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url='./imgs/network_proxy.png', width=300)"
    ]
   },
   {
