--- a/ubuntu/ubuntu_software_install_dpkg.ipynb
+++ b/ubuntu/ubuntu_software_install_dpkg.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a5a6e71f",
+   "metadata": {},
+   "source": [
+    "## dpkg: debian package"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bf023c9",
+   "metadata": {},
+   "source": [
+    "- `dpkg` (Debian Package) itself is a low-level tool. \n",
+    "- `apt` (Advanced Package Tool), a higher-level tool, is more commonly used than dpkg as it can fetch packages from remote locations and deal with complex package relations, such as dependency resolution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7b0dddb2",
    "metadata": {},
    "source": [
