--- a/ubuntu/服务器管理及运维_磁盘_硬盘_内存.ipynb
+++ b/ubuntu/服务器管理及运维_磁盘_硬盘_内存.ipynb
@@ -181,7 +181,10 @@
     "du -sm [文件夹]：返回该文件夹总M数\n",
     "du -h [目录名]：查看指定文件夹下的所有文件大小（包含子文件夹）\n",
     "du -h --max-depth=1：当前目录下各个子目录的总大小\n",
-    "```"
+    "```\n",
+    "\n",
+    "- `du -h --max-depth=1 | sort -h`：并按大小排序\n",
+    "    - `sort -hr`：按大小逆序排序"
    ]
   },
   {
