--- a/ubuntu/tools_btop.ipynb
+++ b/ubuntu/tools_btop.ipynb
@@ -17,7 +17,13 @@
     "    ```\n",
     "    sudo apt install btop\n",
     "    btop\n",
-    "    ```"
+    "    ```\n",
+    "    \n",
+    "    - 界面\n",
+    "        - CPU：所有核心的利用率；\n",
+    "        - MEM：内存的使用情况\n",
+    "        - NET：download，upload；\n",
+    "        - Proc：进程；"
    ]
   }
  ],
