--- a/ubuntu/服务器管理及运维_磁盘_硬盘_内存.ipynb
+++ b/ubuntu/服务器管理及运维_磁盘_硬盘_内存.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ef07a8eb",
+   "metadata": {},
+   "source": [
+    "- 死机：\n",
+    "    - 查看系统日志：`cat /var/log/syslog`，记录系统启动和关闭、服务启动和停止等重要事件。 \n",
+    "    - /var/log/kern.log: 记录内核事件。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0bd1562d",
    "metadata": {},
    "source": [
