--- a/nvidia_cuda/nvidia-smi_显卡信息查看.ipynb
+++ b/nvidia_cuda/nvidia-smi_显卡信息查看.ipynb
@@ -12,6 +12,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5f22a8ef",
+   "metadata": {},
+   "source": [
+    "- SMI: system management Interface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9630a447",
    "metadata": {},
    "source": [
@@ -60,6 +68,23 @@
    ],
    "source": [
     "!nvidia-smi --query-gpu=gpu_name,gpu_bus_id,vbios_version,compute_cap --format=csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c3abcb3",
+   "metadata": {},
+   "source": [
+    "## xorg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfdf1fae",
+   "metadata": {},
+   "source": [
+    "- `/usr/lib/xorg/Xorg`\n",
+    "    - 指的是X.Org Server，这是Linux和UNIX系统上的图形服务器，负责处理图形显示。"
    ]
   },
   {
