--- a/nvidia_cuda/gpu_cuda_nvcc.ipynb
+++ b/nvidia_cuda/gpu_cuda_nvcc.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "618d1cc0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-22T12:29:16.017037Z",
+     "start_time": "2024-02-22T12:29:16.000686Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "3443f092",
    "metadata": {
@@ -237,6 +252,36 @@
    "metadata": {},
    "source": [
     "- https://developer.nvidia.com/cuda-downloads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "71218bcf",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-22T12:29:45.152206Z",
+     "start_time": "2024-02-22T12:29:45.140655Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"../imgs/cuda-archive.png\" width=\"600\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 历史 cuda 版本官方安装\n",
+    "Image(url='../imgs/cuda-archive.png', width=600)"
    ]
   },
   {
