--- a/显卡安装与驱动问题.ipynb
+++ b/显卡安装与驱动问题.ipynb
@@ -224,7 +224,10 @@
     "$ which nvidia-detector\n",
     "$ nvidia-detector\n",
     "$ sudo apt install nvidia-driver-545\n",
-    "```"
+    "```\n",
+    "\n",
+    "- 535 is good (stable)\n",
+    "    - https://ubuntuforums.org/showthread.php?t=2494826&p=14177421&highlight="
    ]
   },
   {
