--- a/显卡安装与驱动问题.ipynb
+++ b/显卡安装与驱动问题.ipynb
@@ -26,6 +26,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "701c0b77",
+   "metadata": {},
+   "source": [
+    "- 注意 nvidia driver 与 cuda 是两个不同的东西\n",
+    "    - 先安装 dirver 再安装 cuda，两者的版本关系是：https://docs.nvidia.com/cuda/cuda-toolkit-release-notes/index.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ae6d858",
    "metadata": {},
    "source": [
