--- a/ubuntu/wget_curl.ipynb
+++ b/ubuntu/wget_curl.ipynb
@@ -37,7 +37,8 @@
     "- 参数\n",
     "    - `-P`：`wget https://karpathy.ai/llama2c/model.bin -P out`\n",
     "        - -P prefix\n",
-    "        - `--directory-prefix=prefix`"
+    "        - `--directory-prefix=prefix`\n",
+    "    - `-O filename`：重命名"
    ]
   }
  ],
@@ -57,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
