--- a/ubuntu/iterm_zsh.ipynb
+++ b/ubuntu/iterm_zsh.ipynb
@@ -88,7 +88,15 @@
     "    - `git clone https://github.com/romkatv/powerlevel10k.git $ZSH_CUSTOM/themes/powerlevel10k`\n",
     "- `git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions`\n",
     "- `git clone https://github.com/agkozak/zsh-z $ZSH_CUSTOM/plugins/zsh-z`\n",
-    "- `git clone https://github.com/agkozak/zsh-z $ZSH_CUSTOM/plugins/zsh-z`"
+    "- `git clone git@github.com:zsh-users/zsh-syntax-highlighting.git $ZSH_CUSTOM/plugins/zsh-syntax-highlighting`\n",
+    "\n",
+    "\n",
+    "\n",
+    "```\n",
+    "https://github.com/hlissner/zsh-autopair\n",
+    "https://github.com/zsh-users/zsh-syntax-highlighting\n",
+    "https://github.com/zsh-users/zsh-autosuggestions\n",
+    "```"
    ]
   },
   {
