--- a/ubuntu/tools_btop_tree.ipynb
+++ b/ubuntu/tools_btop_tree.ipynb
@@ -25,6 +25,23 @@
     "        - NET：download，upload；\n",
     "        - Proc：进程；"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f421bfc",
+   "metadata": {},
+   "source": [
+    "## tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc1db8fc",
+   "metadata": {},
+   "source": [
+    "- 展示树形文件结构\n",
+    "    - `tree -d`：只显示目录；"
+   ]
   }
  ],
  "metadata": {
