--- a/ubuntu/ssh 端口转发与跳板机.ipynb
+++ b/ubuntu/ssh 端口转发与跳板机.ipynb
@@ -23,7 +23,9 @@
    "metadata": {},
    "source": [
     "- `ssh username@ip`\n",
-    "- 配置文件：`~/.ssh/config`"
+    "- 配置文件：`~/.ssh/config`\n",
+    "- `ssh -p`\n",
+    "    - 指定端口号，默认 `22`"
    ]
   },
   {
